# Path_planning

./: CMakeLists.txt  package.xml  typescript
config/scene/: demo_sep.scene  grad.scene  wall.scene
script/: bulk_pick_and_place.py  calculate_complexity_offset.py  confirm_trajectory.py  generate_initial_trajectory_for_moving.py  move_group_python2.py  move_group_python_interface_tutorial.py  transform_trajectory.py  transform_trajectory_output.py  transform_trajectory_second.py  vs087_moveit_tutorial_poses.py
src/: ik_bulk.cpp  ik_solve.cpp  ik_stomp.cpp  ik_test.cpp  moving_example.cpp
transform_path/: CMakeLists.txt  package.xml
