<?xml version="1.0"?>
<package format="2">
  <name>denso_state_behavior</name>
  <version>1.0.0</version>
  <description>The denso_state_behavior package</description>

  <maintainer email="atsuki.yokota@gmail.com">Atsuki Yokota</maintainer>
  <license>BSD</license>
  <url type="repository">http://github.com/Nishida-Lab/denso_state_machine</url>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>denso_state_srvs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>roscpp</depend>

  <test_depend>roslaunch</test_depend>
</package>
